[project]
name = "keybind-vault"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Aaron Muñoz", email = "Thompson6626@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "sqlite-utils>=3.38",
    "textual>=3.3.0",
    "textual-dev>=1.7.0",
]

[project.scripts]
keybind-vault = "keybind_vault:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.11.13",
]
